--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,7 +8,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
         <link href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css" rel="stylesheet">
-        <link href="src/app/root-styles.css" rel="stylesheet">
+        <link href="src/assets/css/root-styles.css" rel="stylesheet">
         
         <script src="https://cdn.auth0.com/js/lock/10.2/lock.min.js"></script>
     </head>
